fixed overlapping class styles on navbar

--- a/internify/src/components/organisms/styles/AuthNavbar.css
+++ b/internify/src/components/organisms/styles/AuthNavbar.css
@@ -35,7 +35,7 @@
   opacity: 0.9;
 }
 
-.navbar_container {
+.auth_navbar_container {
   padding-top: 10px;
   margin-bottom: 15px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
